construct tcp module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,19 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@config": ["src/config"],
+      "@modules/*": ["src/modules/*"],
+      "@types": ["src/types"],
+      "@filter": ["src/common/filter"],
+      "@enums": ["src/enums"],
+      "@constants": ["src/constants"],
+      "@decorators": ["src/decorators"],
+      // "@middlewares": ["src/common/middlewares"],
+      // "@shared": ["src/shared"],
+      // "@log": ["src/common/log"],
+      "@*": ["src/*"]
+    }
   }
 }
