commbined http app to microservice

--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@ SECRECT_CONNECT_TCP_SERVICE=SERCRECT_CONNECT_TCP_SERVICE
 EXPIRES_ACCESS_TOKEN='5m'
 EXPIRES_REFRESH_TOKEN='7d'
 
-THIS_SERVICE=USER
+THIS_SERVICE=EMPLOYE
 
 # ADMIN
 ADMIN_HTTP_PORT=4999
