--- a/apps/backend/user/.env.development
+++ b/apps/backend/user/.env.development
@@ -7,6 +7,12 @@ EXPIRES_REFRESH_TOKEN='7d'
 
 THIS_SERVICE=USER ## Change service
 
+# DATABASE
+DATABASE_USERNAME=locnguyenddbrvt3
+DATABASE_PASSWORD=cN2kMh43M9bkseFK
+DATABASE_URL=mongodb+srv://locnguyenddbrvt3:cN2kMh43M9bkseFK@tokyo.lxcga2t.mongodb.net/
+DATABASE_NAME=kumo-manager
+
 # ADMIN
 ADMIN_HTTP_PORT=4999
 ADMIN_TCP_PORT=5999
