--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,3 @@
 {
-  "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "ES2021",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "paths": {
-      "@config": ["src/config"],
-      "@modules/*": ["src/modules/*"],
-      "@types": ["src/types"],
-      "@enums": ["src/enums"],
-      "@constants": ["src/constants"],
-      "@decorators": ["src/decorators"],
-      "@*": ["src/*"]
-    }
-  }
+  "extends": "tsconfig/base.json"
 }
